added getStructure to API
